# Fusion-Wallet

./: README.md  flutter_native_splash.yaml  pubspec.yaml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/UI/bottomNavBar/: BottomNavBar.dart
lib/UI/common_widgets/: bottomRectangularbtn.dart  commonWidgets.dart  imagePickerActionSheet.dart  inputFields.dart  seedPhraseDisplay.dart
lib/UI/pages/: page.dart
lib/constants/: colors.dart  constants.dart  customIcons.dart
lib/controllers/: appController.dart
lib/services/: apiService.dart  hardwareId.dart  sharedPrefs.dart  uploadMediaService.dart  utilServices.dart
lib/services/authSerice/: authServices.dart
lib/services/dataService/: dataService.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/abi/: erc20.json
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  simple.rs  wallet.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_fusion_wallet.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fusion_wallet.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+37 files in other folders)
